feat:improvements in query keys and favorite songs
